syntax = "proto3";

package file;

option go_package = "./pb";

message ListFilesRequest {};
message ListFilesResponse {
    repeated string filenames = 1;
};

message UploadAndNotifyProgressRequest {
    bytes data = 1;
};

message UploadAndNotifyProgressResponse {
    string msg = 1;
};

service FileService {
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
    rpc UploadAndNotifyProgress(stream UploadAndNotifyProgressRequest) returns (stream UploadAndNotifyProgressResponse);
}